--- a/form.css
+++ b/form.css
@@ -252,8 +252,9 @@ header nav div:first-of-type {
 .buttonsRow{
   display: flex;
   align-items: baseline;
+  margin-top: 10px;
 }
 
 .buttonsRow p{
-  margin-left: auto;
+  margin-left: auto;  
 }
